# transcriber-mcp

./: .gitignore  DEVPLAN.md  LICENSE  README.md  deps.sh  kiso.toml  pyproject.toml  run.py
src/kiso_transcriber_mcp/: __init__.py  server.py  transcriber_runner.py
tests/: create_fixtures.sh  test_live.py  test_run.py  test_server.py  test_transcriber_runner.py
