[project]
name = "kiso-transcriber-mcp"
version = "0.1.0"
description = "Audio transcription via Gemini multimodal, as a Model Context Protocol server"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2",
    "httpx>=0.27",
]

[project.scripts]
kiso-transcriber-mcp = "kiso_transcriber_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kiso_transcriber_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: integration test requiring a live OPENROUTER_API_KEY",
]
